# BigPlane

./: CMakeLists.txt  README.md  TT_Infer.py  TT_Train.py
99.GlobalStatic/: ApplicationHelper.cpp  ApplicationHelper.h  FeatureExtract.cpp  FeatureExtract.h  GISHelper.cpp  GISHelper.h  HeaderFiles.h  InfoWarningError.cpp  InfoWarningError.h  MatchAlgorithm.cpp  MatchAlgorithm.h  OpenCVHelper.cpp  OpenCVHelper.h  SQLiteHelper.cpp  SQLiteHelper.h  TestAndValidate.cpp  TestAndValidate.h
Src/0.VisionGISAIEngine/: CMakeLists.txt
Src/0.VisionGISAIEngine/1.Common/: EngineFunction.cpp  EngineFunction.h  HeaderFiles.h  MacroEnumStruct.h
Src/0.VisionGISAIEngine/3.Vision/: ImageMatcher.cpp  ImageMatcher.h  OpenCVHelper.cpp  OpenCVHelper.h
Src/0.VisionGISAIEngine/6.GIS/: GISHelper.cpp  GISHelper.h
Src/1.UavVisionPlatform/: CMakeLists.txt
Src/1.UavVisionPlatform/0.Platform/: PlatformFunctions.cpp  PlatformFunctions.h  PlatformVariable.cpp  PlatformVariable.h
Src/1.UavVisionPlatform/6.Locator/: LocationThread.cpp  LocationThread.h  Locator.cpp  Locator.h
Src/1.UavVisionPlatform/7.Tracker/: ITracker.cpp  ITracker.h
Src/1.UavVisionPlatform/8.Detector/: Detector.cpp  Detector.h
Src/1.UavVisionPlatform/9.Mapper/: Mapper.cpp  Mapper.h
Src/6.VisionLocation/: CMakeLists.txt  main.cpp
Src/7.TargetTrack/: CMakeLists.txt  main.cpp
Src/8.ChangeDetect/: CMakeLists.txt  main.cpp
Src/9.DomProduct/: CMakeLists.txt  main.cpp
rfdetr/: config.py  detr.py  main.py
rfdetr/datasets/: __init__.py  coco.py
rfdetr/models/: matcher.py
rfdetr/models/backbone/: dinov2.py
rfdetr/models/backbone/dinov2_configs/: dinov2_small.json
rfdetr/util/: misc.py  misc==.py
